packages/kontinuous/tests/__snapshots__/oauth2-proxy.prod.yaml
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test build manifests with snapshots oauth2-proxy.prod 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/projectId: '1234'
    kontinuous/gitBranch: feature-branch-1
    kontinuous/mainNamespace: 'true'
    kapp.k14s.io/exists: ''
    kontinuous/chartPath: project.fabrique.contrib.rancher-namespace
    kontinuous/source: >-
      project/charts/fabrique/charts/contrib/charts/rancher-namespace/templates/namespace.yaml
    kontinuous/deployment: test-oauth2-proxy-feature-branch-1-ffac537e6cbbf934b087-1ed5fy
  labels:
    application: test-oauth2-proxy
    kontinuous/deployment: test-oauth2-proxy-feature-branch-1-ffac537e6cbbf934b087-1ed5fy
    kontinuous/deployment.env: test-oauth2-proxy-feature-branch-1
    kontinuous/ref: feature-branch-1
    kontinuous/resourceName: namespace-4wnyh3
    app.kubernetes.io/manifest-managed-by: kontinuous
    app.kubernetes.io/manifest-created-by: kontinuous
  name: test-oauth2-proxy
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-ingress
  namespace: test-oauth2-proxy
  annotations:
    kontinuous/chartPath: project.fabrique.contrib.security-policies
    kontinuous/source: >-
      project/charts/fabrique/charts/contrib/charts/security-policies/templates/network-policy.yml
    kontinuous/deployment: test-oauth2-proxy-feature-branch-1-ffac537e6cbbf934b087-1ed5fy
    kapp.k14s.io/disable-original: ''
  labels:
    kontinuous/deployment: test-oauth2-proxy-feature-branch-1-ffac537e6cbbf934b087-1ed5fy
    kontinuous/deployment.env: test-oauth2-proxy-feature-branch-1
    kontinuous/ref: feature-branch-1
    kontinuous/resourceName: networkpolicy-49u3gn-netpol-ingress
    app.kubernetes.io/manifest-managed-by: kontinuous
    app.kubernetes.io/manifest-created-by: kontinuous
spec:
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              network-policy/source: ingress-controller
    - from:
        - namespaceSelector:
            matchLabels:
              network-policy/source: monitoring
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: default
  annotations:
    kontinuous/chartPath: project.fabrique.contrib.security-policies
    kontinuous/source: >-
      project/charts/fabrique/charts/contrib/charts/security-policies/templates/service-account.yaml
    kontinuous/deployment: test-oauth2-proxy-feature-branch-1-ffac537e6cbbf934b087-1ed5fy
    kapp.k14s.io/disable-original: ''
  labels:
    kontinuous/deployment: test-oauth2-proxy-feature-branch-1-ffac537e6cbbf934b087-1ed5fy
    kontinuous/deployment.env: test-oauth2-proxy-feature-branch-1
    kontinuous/ref: feature-branch-1
    kontinuous/resourceName: serviceaccount-4nws8p-default
    app.kubernetes.io/manifest-managed-by: kontinuous
    app.kubernetes.io/manifest-created-by: kontinuous
  namespace: test-oauth2-proxy
automountServiceAccountToken: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: oauth2-proxy
    application: test-oauth2-proxy
    kontinuous/deployment: test-oauth2-proxy-feature-branch-1-ffac537e6cbbf934b087-1ed5fy
    kontinuous/deployment.env: test-oauth2-proxy-feature-branch-1
    kontinuous/ref: feature-branch-1
    kontinuous/resourceName: deployment-3d60sq-oauth2-proxy
    app.kubernetes.io/manifest-managed-by: kontinuous
    app.kubernetes.io/manifest-created-by: kontinuous
  name: oauth2-proxy
  namespace: test-oauth2-proxy
  annotations:
    kontinuous/chartPath: project.fabrique.contrib.oauth2-proxy
    kontinuous/source: >-
      project/charts/fabrique/charts/contrib/charts/oauth2-proxy/templates/deployment.yaml
    kontinuous/deployment: test-oauth2-proxy-feature-branch-1-ffac537e6cbbf934b087-1ed5fy
    kapp.k14s.io/disable-original: ''
    kapp.k14s.io/create-strategy: fallback-on-update
    kapp.k14s.io/update-strategy: fallback-on-replace
    kapp.k14s.io/nonce: ''
    kontinuous/depname.full: project.fabrique.contrib.oauth2-proxy.deployment.oauth2-proxy
    kontinuous/depname.chartResource: oauth2-proxy.deployment.oauth2-proxy
    kontinuous/depname.chartName: oauth2-proxy
    kontinuous/depname.chartPath: project.fabrique.contrib.oauth2-proxy
    kontinuous/depname.resourcePath: deployment.oauth2-proxy
    kontinuous/depname.resourceName: oauth2-proxy
    kapp.k14s.io/change-group.oauth2-proxy: kontinuous/oauth2-proxy
    kapp.k14s.io/change-group.project.fabrique.contrib.oauth2-proxy: kontinuous/project.fabrique.contrib.oauth2-proxy
    kapp.k14s.io/change-group.project.fabrique.contrib.oauth2-proxy.deployment.oauth2-proxy: kontinuous/project.fabrique.contrib.oauth2-proxy.deployment.oauth2-proxy
    kapp.k14s.io/change-group.project.fabrique.contrib.oauth2-proxy.oauth2-proxy: kontinuous/project.fabrique.contrib.oauth2-proxy.oauth2-proxy
    kapp.k14s.io/change-group.oauth2-proxy.deployment.oauth2-proxy: kontinuous/oauth2-proxy.deployment.oauth2-proxy
    kapp.k14s.io/change-group.oauth2-proxy.oauth2-proxy: kontinuous/oauth2-proxy.oauth2-proxy
    kapp.k14s.io/change-group.deployment.oauth2-proxy: kontinuous/deployment.oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: oauth2-proxy
  template:
    metadata:
      labels:
        component: oauth2-proxy
        application: test-oauth2-proxy
        kontinuous/deployment: test-oauth2-proxy-feature-branch-1-ffac537e6cbbf934b087-1ed5fy
        kontinuous/deployment.env: test-oauth2-proxy-feature-branch-1
        kontinuous/ref: feature-branch-1
        kontinuous/resourceName: deployment-3d60sq-oauth2-proxy
        app.kubernetes.io/manifest-managed-by: kontinuous
        app.kubernetes.io/manifest-created-by: kontinuous
      annotations:
        kontinuous/deployment: test-oauth2-proxy-feature-branch-1-ffac537e6cbbf934b087-1ed5fy
    spec:
      containers:
        - image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.1
          args:
            - '--upstream'
            - http://some.service:1234
          name: app
          ports:
            - containerPort: 4180
              name: http
          resources:
            limits:
              cpu: 0.5
              memory: 256Mi
            requests:
              cpu: 0.2
              memory: 128Mi
          livenessProbe:
            failureThreshold: 15
            httpGet:
              path: /ping
              port: http
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 1
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /ping
              port: http
            periodSeconds: 5
            initialDelaySeconds: 30
          env:
            - name: OAUTH2_PROXY_REDIRECT_URL
              value: >-
                https://test-oauth2-proxy.fabrique.social.gouv.fr/oauth2/callback
            - name: SOME_ENV
              value: some value
          envFrom:
            - secretRef:
                name: some-secret
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: oauth2-proxy
    application: test-oauth2-proxy
    kontinuous/deployment: test-oauth2-proxy-feature-branch-1-ffac537e6cbbf934b087-1ed5fy
    kontinuous/deployment.env: test-oauth2-proxy-feature-branch-1
    kontinuous/ref: feature-branch-1
    kontinuous/resourceName: service-5cfizy-oauth2-proxy
    app.kubernetes.io/manifest-managed-by: kontinuous
    app.kubernetes.io/manifest-created-by: kontinuous
  name: oauth2-proxy
  namespace: test-oauth2-proxy
  annotations:
    kontinuous/chartPath: project.fabrique.contrib.oauth2-proxy
    kontinuous/source: >-
      project/charts/fabrique/charts/contrib/charts/oauth2-proxy/templates/service.yaml
    kontinuous/deployment: test-oauth2-proxy-feature-branch-1-ffac537e6cbbf934b087-1ed5fy
    kapp.k14s.io/disable-original: ''
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
spec:
  ports:
    - name: http
      port: 80
      targetPort: 4180
  selector:
    component: oauth2-proxy
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kontinuous/chartPath: project.fabrique.contrib.oauth2-proxy
    kontinuous/source: >-
      project/charts/fabrique/charts/contrib/charts/oauth2-proxy/templates/ingress.yaml
    kontinuous/deployment: test-oauth2-proxy-feature-branch-1-ffac537e6cbbf934b087-1ed5fy
    kapp.k14s.io/disable-original: ''
    cert-manager.io: cluster-issuer
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
  labels:
    component: oauth2-proxy
    application: test-oauth2-proxy
    kontinuous/deployment: test-oauth2-proxy-feature-branch-1-ffac537e6cbbf934b087-1ed5fy
    kontinuous/deployment.env: test-oauth2-proxy-feature-branch-1
    kontinuous/ref: feature-branch-1
    kontinuous/resourceName: ingress-5dz9oh-oauth2-proxy
    app.kubernetes.io/manifest-managed-by: kontinuous
    app.kubernetes.io/manifest-created-by: kontinuous
  name: oauth2-proxy
  namespace: test-oauth2-proxy
spec:
  rules:
    - host: oauth2-proxy-test-oauth2-proxy.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              service:
                name: oauth2-proxy
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - oauth2-proxy-test-oauth2-proxy.fabrique.social.gouv.fr
      secretName: oauth2-proxy-crt
---
apiVersion: kapp.k14s.io/v1alpha1
kind: Config
rebaseRules:
  - path:
      - metadata
      - annotations
      - field.cattle.io/publicEndpoints
    type: copy
    sources:
      - existing
      - new
    resourceMatchers:
      - apiVersionKindMatcher:
          apiVersion: apps/v1
          kind: Deployment
metadata:
  annotations:
    kontinuous/chartPath: project.fabrique.contrib.rancher-namespace
    kontinuous/source: >-
      project/charts/fabrique/charts/contrib/charts/rancher-namespace/templates/config.kapp.yaml
"
`;
